syntax = "proto3";

option csharp_namespace = "ChatApplication.Protos";

package chat;

service ChatService {
  rpc Chat (stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage {
  string userId = 1;
  string userName = 2;
  string content = 3;
  int64 timestamp = 4;
  string messageId = 5;
}
